--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Syd Saenz: Personal site and portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> Syd Saenz </h1>
     <p> MIT Junior, 6-2 Electrical Engineering and Computer Science, Class of 2026</p>
+    
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="contact/index.html">Contact</a>
+        <a href="https://github.com/sydsaenz" target="_blank">Github</a>
+    </nav>
+    
+    <img src="images/Ollie.jpg"  alt="Ollie - a calico cat" width="1000" height="700">
+
 </body>
 </html>
