--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="index.html">Home</a>
         <a href="projects/index.html">Projects</a>
         <a href="contact/index.html">Contact</a>
+        <a href="resume/index.html">Resume</a>
         <a href="https://github.com/sydsaenz" target="_blank">Github</a>
     </nav>
     
