--- a/contact/index.html
+++ b/contact/index.html
@@ -9,12 +9,11 @@
     <h1> Contact</h1>
 
     <form action="mailto:foo@example.com" method="post" enctype="text/plain"> </form>
-    <label>Email:</label>
-    <input name="email" type="email">
-    <label>Subject:</label>
-    <input name="subject">
-    <label>Body:</label>
-    <textarea name="body"></textarea>
+    <label>Email: <input name="email" type="email"></label>
+    <label>Subject: <input name="subject"></label>
+    
+    <label>Body: <textarea name="body"></textarea></label>
+   
     <button>Send</button>
 </body>
 </html>
