--- a/contact/index.html
+++ b/contact/index.html
@@ -8,12 +8,13 @@
 <body>
     <h1> Contact</h1>
 
-    <form action="mailto:foo@example.com" method="post" enctype="text/plain"> </form>
+    <form action="mailto:foo@example.com" method="get" enctype="text/plain"> 
     <label>Email: <input name="email" type="email"></label>
     <label>Subject: <input name="subject"></label>
     
     <label>Body: <textarea name="body"></textarea></label>
    
     <button>Send</button>
+    </form>
 </body>
 </html>
