--- a/projects/index.html
+++ b/projects/index.html
@@ -4,8 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a class="current" href="projects/index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a>
+        <a href="../resume/index.html">Resume</a>
+        <a href="https://github.com/sydsaenz" target="_blank">Github</a>
+    </nav>
     <h1>Projects</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore natus odio voluptatum sunt nostrum, quos nihil obcaecati! Molestias laboriosam ratione obcaecati voluptatum quae corporis, totam fugit perferendis non maxime tenetur?</p>
+        </article>
+        <article>
+            <h2>Libero vero harum eos!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quos ab, eveniet iste voluptatem ratione architecto hic, vero rem fugit minima debitis qui consectetur eligendi! Eaque aliquid sequi nihil expedita illum. Recusandae non dicta harum soluta temporibus tempore aperiam.</p>
+        </article>
+        <article>
+            <h2>Praesentium voluptate totam iusto!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Debitis placeat laboriosam exercitationem minima impedit aliquam necessitatibus iste blanditiis! Vitae iure, doloribus repellat saepe fugit officia ratione? Recusandae architecto, consequatur consectetur reiciendis minima non incidunt obcaecati amet delectus laborum.</p>
+        </article>
+        <article>
+            <h2>Magni quam sunt unde.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quia quod tempore repudiandae neque inventore! Corrupti quis voluptatem aliquid porro esse enim eius provident. Reprehenderit ad repudiandae iste voluptas saepe sint sapiente eaque. Autem cum nostrum voluptas molestias error?</p>
+        </article>
+        <article>
+            <h2>Ducimus nulla assumenda optio.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Autem facere adipisci ab blanditiis nostrum recusandae sed quo ex quibusdam. Laudantium dignissimos voluptate expedita nisi accusantium, quis fugit amet, dolore, architecto aut quae minus cumque consectetur tenetur impedit laborum.</p>
+        </article>
+        <article>
+            <h2>A vero maxime doloremque.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nam, quasi sequi. Reprehenderit adipisci, voluptatem magni quia nam, ea excepturi corrupti tempora delectus eius commodi recusandae necessitatibus asperiores voluptates odit nihil. Magni recusandae incidunt laboriosam ipsam eveniet? Nobis, omnis.</p>
+        </article>
+        <article>
+            <h2>Reiciendis consequuntur blanditiis magnam!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quaerat molestiae, natus, veniam voluptatibus eveniet incidunt adipisci ipsam voluptates repudiandae, ullam a! Eos nemo sit facilis reprehenderit labore repellendus, debitis, aliquid eligendi odit reiciendis accusantium obcaecati sapiente vitae! Explicabo.</p>
+        </article>
+        <article>
+            <h2>Quae quasi repellendus vel?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Veritatis inventore nulla nam quam deserunt, iure labore voluptatibus illum dolore aperiam soluta ipsam doloribus officiis, adipisci sit alias? Dignissimos laborum culpa voluptas veritatis, delectus voluptatum quae ea consequuntur! Sapiente.</p>
+        </article>
+        <article>
+            <h2>Unde nemo sed autem.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Esse temporibus iure quibusdam. Esse impedit quae culpa provident omnis deserunt cumque repellat ex ad sit! Recusandae delectus, possimus aut iure placeat nobis obcaecati praesentium, deleniti velit voluptatem quod magni.</p>
+        </article>
+        <article>
+            <h2>Libero corrupti asperiores commodi?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Beatae explicabo molestias maiores, accusantium natus mollitia vero at facilis molestiae temporibus aspernatur sequi unde ex optio recusandae tempore aut voluptatum. Saepe cumque a fuga adipisci est voluptatum porro ducimus.</p>
+        </article>
+        <article>
+            <h2>Assumenda nesciunt quos provident.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Numquam soluta, veniam voluptatem nobis obcaecati, laboriosam ex quod debitis quibusdam quos nemo minus. Dolor vel enim pariatur nostrum odit, quas, minima optio minus aspernatur voluptates animi, nisi facilis distinctio!</p>
+        </article>
+        <article>
+            <h2>Excepturi soluta earum illum.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quia ab eos tempore error earum, provident illo vel cupiditate, natus minima odio similique veritatis, totam alias doloremque tempora! Voluptas voluptatibus aperiam aut repudiandae eligendi voluptatem rerum fuga ex velit.</p>
+        </article>
+    </div>
 </body>
 </html>
