--- a/resume/index.html
+++ b/resume/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../projects/index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a>
+        <a class="current" href="resume/index.html">Resume</a>
+        <a href="https://github.com/sydsaenz" target="_blank">Github</a>
+    </nav>
     <header>
         <h1>Sydney Saenz</h1>
     </header>
