--- a/contact/index.html
+++ b/contact/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../projects/index.html">Projects</a>
+        <a class="current" href="contact/index.html">Contact</a>
+        <a href="../resume/index.html">Resume</a>
+        <a href="https://github.com/sydsaenz" target="_blank">Github</a>
+    </nav>
     <h1> Contact</h1>
 
     <form action="mailto:foo@example.com" method="get" enctype="text/plain"> 
