--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
     <h1> Syd Saenz </h1>
-    <p> MIT Junior, 6-2 Electrical Engineering and Computer Science, Class of 2026</p>
-    
     <nav>
-        <a href="index.html">Home</a>
+        <a class="current" href="index.html">Home</a>
         <a href="projects/index.html">Projects</a>
         <a href="contact/index.html">Contact</a>
         <a href="resume/index.html">Resume</a>
         <a href="https://github.com/sydsaenz" target="_blank">Github</a>
     </nav>
-    
-    <img src="images/Ollie.jpg"  alt="Ollie - a calico cat" width="1000" height="700">
+    <p> MIT Junior, 6-2 Electrical Engineering and Computer Science, Class of 2026</p>
+    <img src="images/Ollie.jpg"  alt="Ollie - a calico cat" width="500" height="400">
 
 </body>
 </html>
